adding another example

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <script
       id="spreedly-iframe"
-      data-environment-key="TbWAYgG7qaagGBh7hPjXQxS4DM4"
+      data-environment-key="OTSpreedlyKey"
       data-number-id="spreedly-number-test"
       data-cvv-id="spreedly-cvv-test">
     </script>
@@ -107,7 +107,7 @@
 
       // Normally would now submit the form..
       // masterForm.submit();
-
+      console.log(pmData);
       // For demonstration purposes just display the token
       var messageEl = document.getElementById('message');
       messageEl.innerHTML = "Success! The returned payment method token is: " + token;
