--- a/payments.html
+++ b/payments.html
@@ -33,7 +33,7 @@
             </ul>
             </form>
             <script>
-                Spreedly.init("OTSpreedlyKey", {
+                Spreedly.init("SpreedlyKey", {
                     "numberEl": "spreedly-number",
                     "cvvEl": "spreedly-cvv"
                 });
