--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <script
       id="spreedly-iframe"
-      data-environment-key="OTSpreedlyKey"
+      data-environment-key="SpreedlyKey"
       data-number-id="spreedly-number-test"
       data-cvv-id="spreedly-cvv-test">
     </script>
